# eepy_explorer

./: README.md  __main__.py  pyproject.toml  requirements.txt  roadmap.md  run.py  setup.py
src/: __init__.py  app.py  eepy_explorer.code-workspace  views.py
src/tools/: __init__.py  build.py  bulk_extract.py  command_manager.py  duplicate_finder.py  launch_manager.py  notes_manager.py  project.py  sync_manager.py  vcs.py
src/utils/: __init__.py  dialogs.py  file_ops.py  icons.py  sync_manager.py  themes.py  utils.py
src/views/: __init__.py  test_results.py
src/widgets/: README.md  __init__.py  address_bar.py  command_dialog.py  compare_dialog.py  duplicate_dialog.py  explorer.py  file_manager.py  launch_dialog.py  navigation.py  notes_duplicate_dialog.py  preview.py  project.py  search_dialog.py  settings.py  sidebar.py  sort_dialog.py  sync_scheduler_dialog.py  tag_dialog.py  text_editor.py  toolbar.py  views.py
src/widgets/tools/: __init__.py  test_tool.py
