[project]
name = "e-explorer"
version = "0.1.0"
description = "GUI Explorer for E Language Projects"
requires-python = ">=3.8"

dependencies = [
    "PyQt6>=6.4.0",
    "tomli>=2.0.1",
    "chardet>=5.0.0",
    "rarfile>=4.0",
    "sip>=6.8.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eepy_explorer"]

[tool.hatch.metadata]
allow-direct-references = true 
